# polytorus

./: .clippy.toml  .env.example  .env.secrets.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTAINERLAB_ANALYSIS.md  CONTAINERLAB_README.md  Cargo.toml  Dockerfile  Dockerfile.clippy-test  Dockerfile.optimized  Dockerfile.simple  Dockerfile.testnet  LICENSE  LOCAL_TESTNET_GUIDE.md  Makefile  NETWORK_ERROR_ANALYSIS.md  NETWORK_TEST_COMPLETION_REPORT.md  README.ja.md  README.md  README_TESTNET.md  README_TESTNET_SIMPLE.md  README_TUI.md  README_VIM_TUI.md  REALISTIC_TESTNET_GUIDE.md  SMART_CONTRACTS.md  TESTNET_DEPLOYMENT.md  TPS_BENCHMARK_ANALYSIS.md  advanced_network_test.sh  audit.toml  benchmark.sh  benchmark_tps.sh  build.rs  cleanup_containerlab.sh  containerlab-topology-enhanced.yml  containerlab-topology-realistic.yml  containerlab-topology.yml  containerlab.yml  deny.toml  (+29 more)
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLETE/: bug_report.ja.yml  bug_report.yml  feature_request.ja.yml  feature_request.yml
.github/workflows/: ci.yml  coverage-llvm-cov.yml  coverage-tarpaulin.yml  coverage.yml  format.yml  kani-verification.yml  main.yml  test.yml
benches/: blockchain_bench.rs  mod.rs  quick_tps_bench.rs
config/: diamond_io.toml  docker-node.toml  modular-node1.toml  modular-node2.toml  modular-node3.toml  modular.toml  polytorus.toml  realistic-testnet.toml  testnet.toml
config/frr/: router-ap.conf  router-edge.conf  router-eu.conf  router-na-east.conf
contracts/: counter.wat  test_contract.wat  token.wat
deployment/: ec2-setup.sh
docker/: Dockerfile.distributed  docker-compose.distributed.yml
docs/: API_REFERENCE.md  CI_CD_INTEGRATION.md  CLI_COMMANDS.md  CODE_QUALITY.md  CONFIGURATION.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_EN.md  DEVELOPMENT.md  DIAMOND_IO_CONTRACTS.md  DIFFICULTY_ADJUSTMENT.md  EUTXO_INTEGRATION.md  EUTXO_INTEGRATION_COMPLETION_REPORT.md  EXECUTION_LAYER_ENHANCEMENT.md  GETTING_STARTED.md  KANI_VERIFICATION.md  LEGACY_MIGRATION_PLAN.md  MODULAR_ARCHITECTURE.md  MODULAR_FIRST.md  MULTI_NODE_SIMULATION.md  MULTI_NODE_SIMULATION.md.backup  MULTI_NODE_SIMULATION_NEW.md  NETWORK_ARCHITECTURE.md  NETWORK_TEST.md  PROJECT_COMPLETION_REPORT.md  README.md  TESTNET_DEPLOYMENT.md  TESTNET_DEPLOYMENT_EN.md  TESTNET_README.md  TPS_BENCHMARK_ANALYSIS.md  TPS_IMPLEMENTATION_SUMMARY.md  TPS_REPORT.md  storage-systems.md  unified-contract-engine.md  whitepaper.md
ec2-config/: ec2-testnet.toml
examples/: anonymous_eutxo_demo.rs  containerlab_mining_simulation.rs  diamond_io_demo.rs  diamond_io_demo_new.rs  diamond_io_demo_new_fixed.rs  diamond_io_performance_test.rs  diamond_io_performance_test_fixed.rs  difficulty_adjustment_example.rs  erc20_demo.rs  governance_demo.rs  io_smart_contract_demo.rs  modular_architecture_demo.rs  modular_architecture_simple.rs  multi_node_simulation.rs  network_demo.rs  p2p_multi_node_simulation.rs  simple_difficulty_test.rs  simple_mining_demo.rs  transaction_monitor.rs  zk_starks_demo.rs
kani-verification/: Cargo.toml  build.rs  run_verification.sh
kani-verification/src/: lib.rs  verify_basic.rs  verify_blockchain.rs  verify_crypto.rs  verify_modular.rs
scripts/: analyze_tps.sh  benchmark.sh  containerlab_testnet.sh  deploy_testnet.sh  deploy_testnet_en.sh  fix_clippy.sh  fix_format_strings.sh  install_openfhe.sh  multi_node_simulation.sh  multi_node_simulation.sh.backup  quality_check.sh  quick_tps_viewer.sh  realistic_testnet.sh  realistic_testnet_simulation.sh  run_kani_verification.sh  simple_tps_test.sh  simulate.sh  simulate_propagation.sh  test_complete_propagation.sh  testnet_manager.py
src/: app.rs  base.rs  basic_kani_test.rs  block.rs  blockchain.rs  cli.rs  command.rs  compat.rs  config.rs  consensus.rs  core.rs  crypto.rs  cryptography.rs  diamond_io_integration.rs  diamond_io_integration_new.rs  diamond_smart_contracts.rs  errors.rs  evm.rs  kani_macros.rs  lib.rs  main.rs  network.rs  server.rs  simple_kani_tests.rs  smart_contract.rs  test_helpers.rs  transaction.rs  type.rs  types.rs  utxoset.rs  wallet.rs  wallets.rs  webserver.rs
src/app/: global.rs  mine.rs  miner_transactions.rs  minner.rs  p2p.rs  public_key.rs  route.rs  show_block.rs  transact.rs  transaction.rs
src/base/: crypto.rs  transaction.rs
src/blockchain/: accessors.rs  block.rs  blockchain.rs  chain.rs  config.rs  difficulty_tests.rs  dynamic_difficulty_tests.rs  factory.rs  hash.rs  kani_verification.rs  mod.rs  pow.rs  types.rs  utxoset.rs  verkle_tests.rs
src/cli/: tui.rs  tui_test.rs
src/command/: cil_listaddresses.rs  cil_reindex.rs  cil_startminer.rs  cil_startnode.rs  cli.rs  cli_createblockchain.rs  cli_createwallet.rs  cli_getbalance.rs  cli_printchain.rs  cli_remote_send.rs  cli_send.rs  cli_startminer.rs  cli_tests.rs  mod.rs  run.rs  term.rs  tui.rs
src/config/: database.rs  enhanced_config.rs  mod.rs
src/consensus/: proof_of_burn.rs
src/contract/: script.rs
src/core/: traits.rs
src/crypto/: anonymous_eutxo.rs  burn.rs  diamond_privacy.rs  ecdsa.rs  enhanced_privacy.rs  fndsa.rs  kani_verification.rs  mod.rs  privacy.rs  production_stark_circuits.rs  real_diamond_io.rs  traits.rs  transaction.rs  types.rs  verkle_tree.rs  wallets.rs  zk_starks_anonymous_eutxo.rs
src/cryptography/: elliptic_curve.rs  falcon.rs  field_element.rs
src/evm/: engine.rs  types.rs
src/modular/: config_manager.rs  consensus.rs  data_availability.rs  diamond_io_layer.rs  eutxo_processor.rs  execution.rs  genesis.rs  kani_verification.rs  layer_factory.rs  mempool.rs  (+16 more)
test_circuit_execution_obfuscation/: circuit_info.txt
testnet-config/: testnet-node2.toml  testnet.toml
tests/: anonymous_eutxo_integration_tests.rs  diamond_io_integration_tests.rs  diamond_io_integration_tests_new.rs  erc20_integration_tests.rs  eutxo_integration_test.rs  governance_integration_tests.rs  network_error_tests.rs  privacy_integration_tests.rs  real_diamond_io_integration_tests.rs  real_diamond_io_integration_tests_new.rs  unified_engine_integration_tests.rs  zk_starks_integration_tests.rs
(+99 files in other folders)
