[package]
name = "polytorus"
version = "0.1.0"
edition = "2021"
description = "Post Quantum Modular Blockchain Platform"
authors = ["quantumshiro"]
license = "MIT"
repository = "https://github.com/quantumshiro/polytorus"
keywords = ["blockchain", "quantum-resistant", "modular", "wasm", "post-quantum"]
categories = ["cryptography", "network-programming", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "simple_difficulty_test"
path = "examples/simple_difficulty_test.rs"

[[example]]
name = "modular_architecture_demo"
path = "examples/modular_architecture_simple.rs"

[[example]]
name = "diamond_io_demo"
path = "examples/diamond_io_demo.rs"

[dependencies]
# Cryptography - unified versions (modern alternatives)
sha2 = "0.10"  # Modern cryptographic hash functions
digest = "0.10"
keccak-asm = "0.1.4"
secp256k1 = {version="0.30.0", features = ["rand"]}

# Legacy crypto (temporary - for compatibility during migration)
rust-crypto = "0.2"

# Modern crypto alternatives (being integrated)
ring = "0.17"  # Modern cryptography library
aes-gcm = "0.10"  # Modern AES-GCM implementation
chacha20poly1305 = "0.10"  # Modern ChaCha20-Poly1305 implementation

# Random number generation - unified versions for fn-dsa compatibility
rand = "0.8.5"  # Keep 0.8 for fn-dsa compatibility
rand_core = "0.6.4"  # Keep 0.6 for fn-dsa compatibility
rand_chacha = "0.3"  # Keep 0.3 for fn-dsa compatibility
rand_distr = "0.5.1"

# Core dependencies (updated to modern versions)
bincode = "1.3"
failure = "0.1"  # Temporary - migrating to anyhow
sled = "0.34"
serde = {version ="1.0", features =["derive"]}
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"  # Updated to latest version
clap = "2.34"  # Keep old version for now, will upgrade later
bitcoincash-addr = "0.5.2"
merkle-cbt = "0.2.2"
fn-dsa = "0.2.0"
# Verkle Tree dependencies
ark-ed-on-bls12-381 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
blake3 = "1.3"

# Web and async
actix-web = "4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.16.0", features = ["v4", "serde"] }
wasmtime = "27.0.0"  # Updated to latest version
anyhow = "1.0"
wat = "1.0"
hex = "0.4"
toml = "0.8"

# Formal verification with Creusot
creusot-contracts = "0.6.0-dev"

# Diamond IO dependencies
diamond-io = { git = "https://github.com/MachinaIO/diamond-io", default-features = false, features = ["debug"] }
openfhe = { git = "https://github.com/MachinaIO/openfhe-rs.git", branch = "exp/reimpl_trapdoor" }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
rayon = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6.1.0"
walkdir = "2"
once_cell = "1.21.1"
bitvec = "1"
memory-stats = "1.2.0"
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[[bench]]
name = "blockchain_bench"
harness = false

[patch.crates-io]
creusot-contracts = { path = "/home/shiro/setting/creusot/creusot-contracts" }
